--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ author :
   googleplus : 104269480423791930531
   feedburner : 
 
+twitter_analytics: 15424716
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
