Add Facebook insights

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author :
   feedburner : 
 
 twitter_analytics: 15424716
+facebook_insights: 132200587
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
