--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,6 @@ author :
   googleplus : 104269480423791930531
   feedburner : 
 
-twitter_analytics: 15424716
-facebook_insights: 132200587
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
@@ -109,6 +107,8 @@ JB :
       site_id : 
     mixpanel :
         token : 
+    facebook : 132200587
+    twitter : 15424716
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
